--- a/patches/config
+++ b/patches/config
@@ -1,5 +1,5 @@
-Bottom: 9a1c110d900d784705fa03695d4ef76b8ec95f60
-Top:    5f3416087af062388709d700eb85cce4373a0a50
+Bottom: 1d093df021d9eb43376921f08f5932f76cd36e92
+Top:    370dda49bad588ebde9065dc8c880a0dc0d16828
 Author: scott snyder <sss@karma>
 Date:   2020-05-22 00:17:13 -0400
 
@@ -8,17 +8,5 @@ Allow separating install directory from build directory.
 
 ---
 
-diff --git a/buildbot/configure.py b/buildbot/configure.py
-index dbfcf989f4d..e0d35eca16b 100644
---- a/buildbot/configure.py
-+++ b/buildbot/configure.py
-@@ -51,7 +51,8 @@ def do_configure(args):
-     if args.shared_libs:
-         llvm_build_shared_libs = 'ON'
- 
--    install_dir = os.path.join(abs_obj_dir, "install")
-+    #install_dir = os.path.join(abs_obj_dir, "install")
-+    install_dir = os.environ['INTEL_ROOT']
- 
-     cmake_cmd = [
-         "cmake",
+buildbot/configure.py | 3 ++-
+ 1 file changed, 2 insertions(+), 1 deletion(-)
